@@ -1,3 +1,5 @@
+20110830
+	Export / import a list of packages as requested by wiz@
 20110828
 	Database silent migration
 	More flexible check_yesno()
